compiler/testData/diagnostics/tests/kt310.fir.kt

fun f(c: LongRange): Int {
    return c.<!UNRESOLVED_REFERENCE!>start<!>()
}
